@@ -153,14 +153,14 @@ document</a>.</p><p>
   <tr>
     <th>Remedy IT</th>
     <td>Maintains ACE on many platforms required for their ACE and
-        TAO service offerings. We support AIX, Borland C++ Builder 6/2006,
+        TAO service offerings. We support AIX, Borland C++ Builder 6/2006/2007,
         CBuilderX 1.0, MinGW, Microsoft Visual C++, GCC,
         Cygwin, VxWorks 5.5.x & 6.x, OpenVMS 8.2-1 & 8.3 on Alpha and IA64,
         BlueCAT Linux, RedHat, Fedora,
         Tru64, SuSE Linux on Alpha/IA32/EM64T/IA64, RTEMS, QNX, LynxOS 4.0/4.2,
         HPUX 11i v1/v2 32/64 bit on PA-RISC, and
-        HPUX 11i v2 on Itanium. The Intel C++ compiler is supported on
-        Windows 32/64bit, Linux IA32/EM64T/Itanium2.
+        HPUX 11i v2/v3 on IA64. The Intel C++ compiler is supported on
+        Windows 32/64bit, Linux IA32/EM64T/IA64.
     </td>
     <td>Remedy IT <a href="http://www.theaceorb.nl/">web site</a> and
         the TAO <a href="TAO/TAO-INSTALL.html">install document</a>
