@@ -1,3 +1,8 @@
+Wed Aug 22 08:52:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ACE-INSTALL.html:
+          Updated Remedy IT platforms
+
 Wed Aug 22 08:49:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ACE-INSTALL.html:
